# improvementLoop

./: .gitignore  CHANGELOG.md  README.md  averyloop_config.example.json  project_config.example.yaml  pyproject.toml
averyloop/: evaluator.py  git_utils.py  loop_config.py  loop_tracker.py  orchestrator_v2.py  project_config.py
averyloop/agents/: _api.py  auditor.py  implementer.py  reviewer.py
averyloop/rag/: chunker.py  indexer.py  retriever.py
examples/pancdata3/: project_config.yaml
improvement_loop/: __init__.py  orchestrator_v2.py  project_config.py
improvement_loop/agents/: reviewer.py
tests/: conftest.py  test_evaluator_finding.py  test_git_utils.py  test_loop_tracker.py  test_orchestrator.py  test_project_config.py
